# rss-receiver

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  sources.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/desktop/: api-contract.md  core-designs.md  product-spec.md  ux-spec.md
docs/superpowers/plans/: 2026-06-23-desktop-app.md
docs/superpowers/specs/: 2026-06-23-desktop-app-design.md
src/: pino-roll.d.ts
src/app/: archive-runner.ts  integrations.ts  notion-lifecycle.ts  notion-sync.ts  receiver.ts  scheduler.ts  source-sync.ts  summary-runner.ts
src/app/activity/: activity-runner.ts  activity-types.ts
src/app/radar/: radar-runner.ts  radar-types.ts
src/cli/: index.ts
src/domain/rss/: rss.ts
src/service/: process.ts  server.ts
src/shared/: hash.ts  logger.ts
summary-skills/: case-study.json  default.json  engineering-deep-dive.json  newsletter-digest.json  opinion-strategy.json  product-update.json  research-evaluation.json  tutorial-guide.json
test/app/: activity.test.ts  notion-sync.test.ts  radar.test.ts  receiver.test.ts  source-sync.test.ts
test/domain/: rss.test.ts  signals.test.ts  summary-classifier.test.ts  summary-skills.test.ts  topics.test.ts
test/infra/: config.test.ts  extractor.test.ts  notion-markdown.test.ts  storage.test.ts
test/service/: server.test.ts
(+51 files in other folders)
