[package]
name = "rss-receiver-desktop"
version = "0.1.0"
description = "RSS Receiver desktop shell"
authors = ["RSS Receiver"]
edition = "2021"

[lib]
name = "rss_receiver_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
